// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseSelect should fetch items with focus 1`] = `
<div
  class="dropdown-root"
>
  <ul
    class="base-select-menu dropdown-menu show"
  >
    <li>
      <button
        class="button-root dropdown-item text-truncate active btn btn-unstyled"
        type="button"
      >
        test
      </button>
    </li>
  </ul>
</div>
`;

exports[`BaseSelect should render 1`] = `
<div>
  <div
    aria-haspopup="true"
    class="input-group base-select-input-root select-input-root"
  >
    <div
      class="input-group-item"
    >
      <input
        autocomplete="off"
        class="input-root form-control input-group-inset input-group-inset-after"
        placeholder=""
        type="text"
        value=""
      />
      <div
        class="input-group-inset-item input-group-inset-item-after"
      >
        <svg
          class="lexicon-icon lexicon-icon-caret-bottom icon-root"
          role="presentation"
        >
          <use
            href="#caret-bottom"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`BaseSelect should render as disabled 1`] = `
<div>
  <div
    aria-haspopup="true"
    class="input-group base-select-input-root select-input-root"
  >
    <div
      class="input-group-item"
    >
      <input
        autocomplete="off"
        class="input-root form-control input-group-inset input-group-inset-after"
        disabled=""
        placeholder=""
        type="text"
        value=""
      />
      <div
        class="input-group-inset-item input-group-inset-item-after"
      >
        <svg
          class="lexicon-icon lexicon-icon-caret-bottom icon-root"
          role="presentation"
        >
          <use
            href="#caret-bottom"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`BaseSelect should render with Graphql 1`] = `
<div>
  <div
    aria-haspopup="true"
    class="input-group base-select-input-root select-input-root"
  >
    <div
      class="input-group-item"
    >
      <input
        autocomplete="off"
        class="input-root form-control input-group-inset input-group-inset-after"
        placeholder=""
        type="text"
        value=""
      />
      <div
        class="input-group-inset-item input-group-inset-item-after"
      >
        <svg
          class="lexicon-icon lexicon-icon-caret-bottom icon-root"
          role="presentation"
        >
          <use
            href="#caret-bottom"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Item should render 1`] = `
<div>
  <li>
    <button
      class="button-root dropdown-item text-truncate btn btn-unstyled"
      type="button"
    >
      test
    </button>
  </li>
</div>
`;

exports[`Item should select an item 1`] = `
<div>
  <li>
    <button
      class="button-root dropdown-item text-truncate btn btn-unstyled"
      type="button"
    >
      test
    </button>
  </li>
</div>
`;
